aligned correctly

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -21,6 +21,7 @@
     height: 5vh;
     width: 13%;
     /* background-color: brown; */
+    margin-left: -11%;
   }
   .footer-mail, .footer-phone, .footer-web{
     height: 5vh;
